--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -1,3 +1,49 @@
+$one: 1
+
+@mixin row 
+  display: flex
+  flex-direction: row
+
+@mixin no_margin
+  margin:0
+  padding: 0
+  
+@media (min-width: 1100px)
+  .container
+    @include row
+    height: 100vh
+  .item
+    display: grid
+    justify-content: center
+    align-items: center
+    width: 25%
+    height: 100vh
+  
+.wide 
+  width: 75%
+  height: 100vh
+  animation: extendDiv 0.5s 
+.content
+   margin: 100px
+  
+@media (max-width: 1100px)
+  .container 
+    border: 2px solid red
+  .item
+    display: grid
+    justify-content: center
+    align-items: center
+    height: 25vh
+  .wide
+    width: 100%
+    height: 50vh
+    border: 2px solid green
+    animation: none
+  .content
+    margin: 40px
+  .shortcontent
+    display: none
+    
 @keyframes extendDiv
   0%
     width: 25%
@@ -8,14 +54,8 @@
     opacity: 0
   100%
     opacity: 100
-@mixin row
-  display: flex
-  flex-direction: row
 
-@mixin no_margin
-  margin:0
-  padding: 0
-
+  
 .title 
   width: max-content
   height: 30px
@@ -26,28 +66,9 @@
   &::hover
   cursor: pointer
 
-.container
-  @include row
-  height: 100vh  
-  h4
-  @include no_margin
-  
-.item
-  display: grid
-  justify-content: center
-  align-items: center
-  width: 25%
-  height: 100vh
-  
-.wide 
-  width: 75%
-  height: 100vh
-  animation: extendDiv 0.5s
-
 .content
   color: white
   animation: displayDiv 1.0s
-  margin: 100px
   p
     margin-top: 0
     margin-bottom: 10px
@@ -57,7 +78,7 @@
     margin-bottom: 10px
 
 .colorReload
-  position: absolute
+  position: fixed
   width: 30px
   height: 30px
   border-radius: 50%
@@ -158,7 +179,7 @@
     animation: lineAppear 0.5s ease
 
 .tooltip
-  position: absolute
+  position: fixed
   color: white
   height: 20px
   font-size: small
