--- a/styles/Home.module.sass
+++ b/styles/Home.module.sass
@@ -34,7 +34,11 @@ $icon-size: 24px
   justify-content: center
   align-items: center
   
+  
 @media (min-width: 1100px)
+  .spacer 
+    height: 0px
+  
   .container
     @include row
     height: 100vh
@@ -50,8 +54,20 @@ $icon-size: 24px
   border: 1px solid transparent
 .content
   margin: 100px
+  color: $text-color
+  animation: displayDiv 1.0s
+  p
+    margin-top: 2px
+    margin-bottom: 10px
+    font-family: Arial, Helvetica, sans-serif
+    line-height: 1.5em
+  h4
+    margin-bottom: 10px
   
 @media (max-width: 1100px)
+  .spacer 
+    height: 0px
+
   .item
     @include grid_center
     height: 25vh
@@ -61,6 +77,17 @@ $icon-size: 24px
     animation: none
   .content
     margin: 40px
+    color: $text-color
+    animation: displayDiv 1.0s
+    border: 1px solid green
+    p
+    margin-top: 0
+    margin-bottom: 5px
+    font-family: Arial, Helvetica, sans-serif
+    line-height: 1em
+    h4
+    font-size: 4mm
+    margin-bottom: 5px
   .shortcontent
     display: none
     
@@ -83,16 +110,16 @@ $icon-size: 24px
   color: $text-color
   @include pointer
   
-.content
-  color: $text-color
-  animation: displayDiv 1.0s
-  p
-    margin-top: 0
-    margin-bottom: 10px
-    font-family: Arial, Helvetica, sans-serif
-    line-height: 1.5em
-  h4
-    margin-bottom: 10px
+// .content
+//   color: $text-color
+//   animation: displayDiv 1.0s
+//   p
+//     margin-top: 0
+//     margin-bottom: 10px
+//     font-family: Arial, Helvetica, sans-serif
+//     line-height: 1.5em
+//   h4
+//     margin-bottom: 10px
 
 .colorReload
   position: fixed
